services/default/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
  selector:
    app: nginx
